# GhostWire

./: .gitignore  CHANGELOG.md  CHANNELS.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: app.rs  main.rs  network.rs  ui.rs
docs/: CLIENT.md  FEATURES.md  LOCAL_DEV.md  README.md  WINDOWS.md
server/: Cargo.toml  Shuttle.toml
server/src/: local.rs  main.rs  relay.rs
