[package]
name = "ghostwire-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ghostwire"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# TUI Framework
ratatui = "0.25"
crossterm = "0.27"

# WebSocket Client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
